# rabbit-slide-kou-rubykaigi-2016

./: .gitignore  .rabbit  README.rd  Rakefile  bindings-as-extension-library.rab  config.yaml  fat-gem.rab  how-to-create-bindings-2016.rab  overview.md  theme.rb
c-api/: Makefile
c-api/bindings/: extconf.rb  hello.c
c-api/extension/: Rakefile  hello.c
c-api/performance/: Rakefile  bench.rb  calc.c
ffi/bindings/: hello.rb  usage.rb
ffi/performance/: Rakefile  bench.rb
gobject-introspection/bindings/: hello.rb  usage.rb
libcalc/: Makefile  libcalc.c
libcalc/include/: calc.h
libgobject-calc/: .gitignore  Makefile.am  Rakefile  configure.ac
libgobject-calc/doc/reference/: Makefile.am
libgobject-calc/gcalc/: Makefile.am  gcalc.c  gcalc.h
libgobject-hello/: .gitignore  Makefile.am  bench.rb  configure.ac
libgobject-hello/doc/reference/: Makefile.am  ghello-docs.sgml
libgobject-hello/ghello/: Makefile.am  ghello.c  ghello.h
libhello/: Makefile  libhello.c
libhello/include/: hello.h
swig/bindings/: hello.i
swig/bindings-naive/: Rakefile  extconf.rb  hello.rb  usage.rb
swig/bindings-rubyish/: extconf.rb  hello.i  usage.rb
swig/performance/: Rakefile  bench.rb  calc.i  extconf.rb
